Lisätty riippuvuuksien versioita.